# commonlit-evaluate-student-summaries

./: .env.example  .gitignore  README.md  compose.gpu.yml  compose.yml  pyproject.toml  run.sh
configs/: config.yaml
configs/dataset/: default.yaml
configs/experiment/: 000.yaml  000e.yaml  001.yaml  debug.yaml
configs/fold/: default.yaml
configs/hydra/: default.yaml
configs/meta/: default.yaml
configs/model/: default.yaml
configs/optimizer/: default.yaml
configs/paths/: default.yaml  kaggle.yaml
configs/scheduler/: default.yaml
gcp/: mount_gcs_bucket.sh
src/customs/: deploy.py  load_data.py
src/customs/v1/: ensemble.py  inference.py  load_data.py  preprocess.py  train.py
src/tools/torch/: dataset.py  metrics.py  model.py  trainer.py
src/utils/: kaggle_utils.py  logger.py  nn_utils.py
