[tool.poetry]
name = "commonlit-evaluate-student-summaries"
version = "0.1.0"
description = "python project template"
authors = ["osushinekotan"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
kaggle = "^1.5.16"
colorlog = "^6.7.0"
hydra-core = "^1.3.2"
pandas = "^2.1.0"
transformers = "^4.33.2"
torch = ">=2.0.0, !=2.0.1"
wandb = "^0.15.10"
joblib = "^1.3.2"
scikit-learn = "^1.3.1"
sentencepiece = "^0.1.99"
hydra-colorlog = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.278"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310" 
unfixable = ["F401", "F841"]
ignore = ["E501"]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true